# livestock-chain

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
app/: .vercelignore  package-lock.json  package.json  tailwind.config.ts
app/app/: globals.css  layout.tsx  page.tsx
app/app/animal/[id]/: page.tsx
app/app/api/chain/check-animal/: route.ts
app/app/api/chain/check-listing/: route.ts
app/app/api/chain/confirm-sale/: route.ts
app/app/api/chain/create-listing/: route.ts
app/app/api/chain/deposit-funds/: route.ts
app/app/api/chain/register-animal/: route.ts
app/app/api/metadata/[id]/: route.ts
app/app/api/register-animal/: route.ts
app/app/api/torttulik/: route.ts
app/app/api/torttulik/[id]/: route.ts
app/app/api/update-record/: route.ts
app/app/api/verify-animal/: route.ts
app/app/deal/[id]/: page.tsx
app/app/lib/: anchor-client.ts  bubblegum.ts  solana.ts  torttulik-api.ts
app/app/lib/idl/: livestock_registry.json  marketplace_escrow.json
app/app/marketplace/: page.tsx
app/app/my-animals/: page.tsx
app/app/register/: page.tsx
mock-api/: db.json
programs/livestock-registry/: Cargo.toml
programs/livestock-registry/src/: lib.rs
programs/marketplace-escrow/: Cargo.toml
programs/marketplace-escrow/src/: lib.rs
tests/: livestock-registry.ts
