[package]
name = "livestock-registry"
version = "0.1.0"
description = "Livestock registration and verification on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "livestock_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
